# documentation-automation

./: .gitignore  .pre-commit-config.yaml  LP_dane.csv  ZM_dane.csv  auth.py  config.py  csv_parser.py  db_builder.py  debug_parser.py  doc_generator.py  gui.py  html_processor.py  migrate_structure.py  note_harvester.py  note_harvester.py.bak  pyproject.toml  readme.md  rename_images.py  vendors.py
core/: __init__.py  catalogs.py  context_builder.py  document_updater.py  file_scanner.py  versioning.py
gui/: gui.py
parsers/: csv_parser.py  db_builder.py  vendors.py
templates/: project_doc.md.j2
tests/: conftest.py  test_core_catalogs.py  test_core_context_builder.py  test_core_document_updater.py  test_core_file_scanner.py  test_core_versioning.py  test_csv_parser.py  test_vendors.py
tools/: debug_parser.py  migrate_structure.py  rename_images.py
